change css a CSS

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <html>
   <head>
     <title>First site</title>
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="CSS/styles.css">
 
   </head>
   <body>
